[package]
name = "hardback_broadstruct"
version = "0.1.0"
authors = ["alanpoon <brightshadowx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hardback_codec ={git="https://github.com/alanpoon/hardback_codec.git"}